# AutonomusAcademicAssistantAgents

./: .env  README.md  agent.md  docker-compose.yml  garbage.md  settings.json  token.txt
.codewhale/state/: subagents.v1.json
architecture/: 01_AAA_Next_Generation_Architecture.md  02_IMPLEMENTATION_ROADMAP.md  03_DEVELOPMENT_RULES.md  04_IMPLEMENTATION_PROGRESS.md  05_DECISIONS.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  agents.md  config.py  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt
backend/aaa_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/agents/: __init__.py  search_agent.py  syllabus_parser.py  tutor_quiz_agent.py
backend/api/: __init__.py  routes.py  schemas.py
backend/app/: __init__.py  main.py
backend/app/adaptive/: __init__.py  diagnostics.py  engine.py  models.py  planner.py  recommendations.py  rules.py  schemas.py
backend/app/agents/: __init__.py  adaptive_router.py  analytics_agent.py  embedding_agent.py  knowledge_graph_agent.py  quiz_agent.py  root_cause_agent.py  search_retrieval_agent.py  syllabus_parser.py  teaching_agent.py
backend/app/analytics/: __init__.py  calculations.py  models.py  repository.py  schemas.py  service.py
backend/app/api/: __init__.py  health.py
backend/app/api/v2/: __init__.py  adaptive.py  analytics.py  auth.py  dashboard.py  jobs.py  knowledge_graph.py  learning.py  lessons.py  quiz.py  recommendations.py  retrieval.py  router.py  search.py  session.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py  password.py  schemas.py  service.py
backend/app/core/: config.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  chroma_client.py  object_storage.py  postgres.py  redis.py  repository.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 5e0d4ce4b303_initial_schema_section_15.py  a1b2c3d4e5f6_add_username_is_active_last_login_to_users.py  b2c3d4e5f6a7_add_checkpoint_data_to_sessions.py
backend/app/db/models/: __init__.py  base.py  enums.py  knowledge_graph.py  quiz.py  resources.py  session.py  user.py
backend/app/graph/: __init__.py  checkpointer.py  graph_builder.py  state.py
backend/app/graph/nodes/: __init__.py  adaptive_route.py  authn.py  embed.py  evaluate.py  init_kg.py  parse.py  quiz.py  retrieve.py  retrieve_web.py  search.py  teach.py
backend/app/ingestion/: __init__.py  chunker.py  document_processor.py  embedding_factory.py  vector_store.py
backend/app/ingestion/embedding/: base.py  gemini_embedding.py  mock_embedding.py
backend/app/jobs/: __init__.py  models.py  queue.py  scheduler.py  schemas.py  service.py  tasks.py  worker.py
backend/app/llm/: __init__.py  evaluation_service.py  provider_router.py  quiz_service.py  tutor_service.py
backend/app/llm/providers/: __init__.py  base.py  deepseek.py  gemini.py  mock.py
backend/app/middleware/: __init__.py  rate_limit.py  request_context.py  security.py
backend/app/monitoring/: __init__.py  metrics.py  tracing.py
backend/app/services/: __init__.py  adaptive_routing.py  context_builder.py  knowledge_graph_service.py  learning_path_service.py  mastery_service.py  retrieval_service.py  workflow_orchestrator.py
backend/app/session/: __init__.py  checkpoint_store.py  session_manager.py  session_models.py  session_repository.py
backend/orchestration/: __init__.py  graph.py  nodes.py  state.py
backend/persistence/: __init__.py  db.py  vector_store.py
backend/tests/: test_agent1.py  test_agent2.py  test_agent3.py  test_api.py  test_graph_routing.py  test_sprint10_observability.py  test_v2_foundation.py
backend/tests/adaptive/: __init__.py  test_adaptive_engine.py
backend/tests/analytics/: test_analytics_api.py  test_calculations.py
backend/tests/auth/: __init__.py  test_api.py  test_jwt.py  test_password.py  test_service.py
backend/tests/integration/: test_quiz_scoring.py
backend/tests/jobs/: test_jobs.py
backend/tests/session/: test_session.py
backend/tests/unit/: test_adaptive_routing.py  test_checkpointer.py  test_chunking.py  test_document_processing.py  test_embedding_abstraction.py  test_evaluation_service.py  test_knowledge_graph_service.py  test_learning_goal.py  test_learning_path_service.py  test_mastery_service.py  test_persistence.py  test_provider_abstraction.py  test_quiz_service.py  test_retrieval_service.py  test_tutor_service.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  index.css  main.tsx  utils.js
frontend/src/api/: auth.ts  client.ts  index.ts
frontend/src/components/: CurriculumPath.jsx  ErrorBoundary.tsx  LearningRoadmap.tsx  LessonView.jsx  Onboarding.jsx  ProfileView.jsx  ProgressBar.jsx  QuizView.jsx  SyllabusOverview.jsx
frontend/src/constants/: index.ts
frontend/src/contexts/: AuthContext.tsx  LearningContext.tsx
(+69 files in other folders)
