[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaa-backend"
version = "0.1.0"
description = "AAA v2 backend foundation (Sprint 0)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.3,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "redis>=5.0,<6.0",
  "chromadb>=1.0,<2.0",
  "httpx>=0.28,<1.0",
  "structlog>=24.0,<25.0",
  "python-json-logger>=2.0,<3.0",
  "prometheus-client>=0.19,<1.0",
  "opentelemetry-api>=1.22,<2.0",
  "opentelemetry-sdk>=1.22,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.22,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.43b0,<1.0",
  "opentelemetry-instrumentation-httpx>=0.43b0,<1.0",
  "opentelemetry-instrumentation-redis>=0.43b0,<1.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.43b0,<1.0",
  "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
