[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aaa-backend"
version = "0.1.0"
description = "AAA v2 backend — LangGraph-orchestrated adaptive tutoring platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # ── API server ───────────────────────────────────────────────────────────
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "starlette>=0.38,<1.0",

  # ── Configuration & env ──────────────────────────────────────────────────
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0,<2.0",

  # ── Database ─────────────────────────────────────────────────────────────
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "asyncpg>=0.29,<1.0",
  "alembic>=1.13,<2.0",

  # ── Redis ────────────────────────────────────────────────────────────────
  "redis>=5.0,<6.0",

  # ── Vector store ─────────────────────────────────────────────────────────
  "chromadb>=1.0,<2.0",

  # ── LangGraph (orchestration) ────────────────────────────────────────────
  "langgraph>=0.3,<2.0",

  # ── LLM providers ────────────────────────────────────────────────────────
  "httpx>=0.28,<1.0",
  "google-genai>=1.0,<2.0",

  # ── Web search ───────────────────────────────────────────────────────────
  "tavily-python>=0.5,<1.0",

  # ── Auth ─────────────────────────────────────────────────────────────────
  "bcrypt>=4.1,<5.0",
  "PyJWT>=2.9,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "email-validator>=2.0.0,<3.0",

  # ── Content processing ───────────────────────────────────────────────────
  "pypdf>=5.0,<7.0",

  # ── Object storage ───────────────────────────────────────────────────────
  "boto3>=1.34,<2.0",

  # ── Observability ────────────────────────────────────────────────────────
  "structlog>=24.0,<25.0",
  "python-json-logger>=2.0,<3.0",
  "prometheus-client>=0.19,<1.0",
  "opentelemetry-api>=1.22,<2.0",
  "opentelemetry-sdk>=1.22,<2.0",
  "opentelemetry-exporter-otlp-proto-http>=1.22,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.43b0,<1.0",
  "opentelemetry-instrumentation-httpx>=0.43b0,<1.0",
  "opentelemetry-instrumentation-redis>=0.43b0,<1.0",
  "opentelemetry-instrumentation-sqlalchemy>=0.43b0,<1.0",

  # ── Resilience ───────────────────────────────────────────────────────────
  "tenacity>=8.4,<9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
